tests/baselines/local-a1.de1.di1/_cax-a1.errors.txt
tests/cases/compiler/_cax-a1.ts(13,27): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/_cax-a1.ts (1 errors) ====
    declare type X1Foo = Readonly<{ kind: "foo", foo: string, bug: () => number[] }> ;
    declare type X1Bar = Readonly<{ kind: "bar", bar: number, bug: () => number[] }> ; 
    declare type X1Baz = Readonly<{ kind: "baz", baz: boolean, bug: () => number[] }>;
    
    declare type X1 = | X1Foo | X1Bar | X1Baz ; 
    declare const obj: undefined | X1;
    declare const ubool:()=>boolean;
    {
        const isBug = obj?.bug();
        while (ubool()) { 
            if (!obj || obj.kind!=="foo") {
                if (isBug) {
                    const t = obj.bug;  // `t` and `obj.bug` are correctly typed, but `obj` is "possibly unedfined"
                              ~~~
!!! error TS2532: Object is possibly 'undefined'.
                }
            }        
        }
    }
    